[gd_scene load_steps=11 format=2]

[ext_resource path="res://ağaç.png" type="Texture" id=1]
[ext_resource path="res://Agac.gd" type="Script" id=2]
[ext_resource path="res://AgacVurulma.wav" type="AudioStream" id=3]
[ext_resource path="res://Gölge.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("ağaç1:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 10.0, 20.0, 38.0, 90.0, 85.0, 90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ağaç1:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -27.4076 ), Vector2( 10.232, -29.635 ), Vector2( 16.359, -29.635 ), Vector2( 25.941, -20.403 ), Vector2( 40.859, -5.135 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ağaç1:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.98063 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_Kesildim"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sag/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sol/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ true, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Ust/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Alt/CollisionShape2D:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Gölge:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1.5 ), Vector2( 32, 1.5 ), Vector2( 46, 1.5 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Gölge:scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.25992, 0.59375 ), Vector2( 1.5, 0.594 ), Vector2( 1.5, 0.8 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Gölge:self_modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("AgacAlan/CollisionShape2D:disabled")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ true, true ]
}

[sub_resource type="Animation" id=2]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("ağaç1:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -10.0, -20.0, -38.0, -90.0, -85.0, -90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ağaç1:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -27.4076 ), Vector2( -10.227, -29.635 ), Vector2( -16.359, -29.635 ), Vector2( -25.941, -25.403 ), Vector2( -40.859, -5.135 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ağaç1:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.98063 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_Kesildim"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sol/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ true, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Ust/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Alt/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Sag/CollisionShape2D:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Gölge:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1.5 ), Vector2( -32, 1.5 ), Vector2( -46, 1.5 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Gölge:scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.25992, 0.59375 ), Vector2( 1.5, 0.59375 ), Vector2( 1.562, 0.8 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Gölge:self_modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("AgacAlan/CollisionShape2D:disabled")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ true, true ]
}

[sub_resource type="Animation" id=3]
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("ağaç:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -27.403 ), Vector2( 2, -27.403 ), Vector2( 0, -27.403 ), Vector2( -2, -27.403 ), Vector2( 0, -27.403 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ağaç1:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -27.4076 ), Vector2( 2, -27.408 ), Vector2( 0, -27.408 ), Vector2( -2, -27.408 ), Vector2( 0, -27.408 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Gölge:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1.5 ), Vector2( 2, 1.5 ), Vector2( 0, 1.5 ), Vector2( -2, 1.5 ), Vector2( 0, 1.5 ) ]
}

[sub_resource type="CapsuleShape2D" id=4]
custom_solver_bias = 1.0
radius = 4.40686
height = 8.0148

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4, 9.76386 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 10.8489, 4 )

[node name="Agac" type="Node2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 2 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0
max_distance = 1000.0

[node name="Gölge" type="Sprite" parent="."]
position = Vector2( 0, 1.5 )
scale = Vector2( 1.25992, 0.59375 )
texture = ExtResource( 4 )

[node name="ağaç" type="Sprite" parent="."]
position = Vector2( 0, -27.403 )
texture = ExtResource( 1 )
hframes = 2
frame = 1

[node name="ağaç1" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.98063 )
position = Vector2( 0, -27.4076 )
texture = ExtResource( 1 )
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/KesilmeSağ" = SubResource( 1 )
anims/KesilmeSol = SubResource( 2 )
anims/Vurulma = SubResource( 3 )
blend_times = [ "Vurulma", "KesilmeSağ", 1.0, "Vurulma", "KesilmeSol", 1.0 ]

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
rotation = 1.5708
shape = SubResource( 4 )

[node name="AgacAlan" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AgacAlan"]
rotation = 1.5708
shape = SubResource( 4 )

[node name="Sag" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sag"]
position = Vector2( 16, 0 )
scale = Vector2( 1.02081, 1 )
shape = SubResource( 5 )

[node name="Sol" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sol"]
position = Vector2( -16, 0 )
shape = SubResource( 5 )

[node name="Ust" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ust"]
position = Vector2( 0, -12 )
shape = SubResource( 6 )

[node name="Alt" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Alt"]
position = Vector2( 0, 12 )
shape = SubResource( 6 )

[connection signal="area_entered" from="AgacAlan" to="." method="_on_AgacAlan_area_entered"]
[connection signal="body_entered" from="Sag" to="." method="_on_Sag_body_entered"]
[connection signal="body_exited" from="Sag" to="." method="_on_Sag_body_exited"]
[connection signal="body_entered" from="Sol" to="." method="_on_Sol_body_entered"]
[connection signal="body_exited" from="Sol" to="." method="_on_Sol_body_exited"]
[connection signal="body_entered" from="Ust" to="." method="_on_Ust_body_entered"]
[connection signal="body_exited" from="Ust" to="." method="_on_Ust_body_exited"]
[connection signal="body_entered" from="Alt" to="." method="_on_Alt_body_entered"]
[connection signal="body_exited" from="Alt" to="." method="_on_Alt_body_exited"]
